intentando arreglar el form

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ form{
     height: 1100px;
     border: 10px outset rgb(237, 175, 5);
     color: white;
-    border-radius: 10px;
     background-color: black;
     margin: 0 auto;
     font-size: 16px;
@@ -87,9 +86,10 @@ button{
     width: 200px;
     height: 50px;
     border-radius: 5px;
-    margin-left: 65px;
+    margin-left: 15px;
     margin-bottom: 10px;
 }
 div{
-    align-self: center;
+    border: none;
+    justify-content: center;
 }
