Fuera de hora quizas porque ya entregue pero me quedaban unos min quitar/ de la fuente

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'fighter';
-    src: url(/assets/font/street.otf);
+    src: url(assets/font/street.otf);
 }
 :root{
     font-family: 'fighter';
